// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUrl extract 1`] = `
Object {
  "file": Object {
    "content": "hello",
    "lastModified": 1574155444339,
    "name": "test.txt",
    "size": 5,
    "type": "text/plain",
  },
  "url": "http://localhost:56384",
}
`;

exports[`XUrl extractFile 1`] = `
Object {
  "content": "hello",
  "lastModified": 1574155444339,
  "name": "test.txt",
  "size": 5,
  "type": "text/plain",
}
`;

exports[`XUrl extractUrl 1`] = `"http://localhost:56384"`;

exports[`XUrl generate 1`] = `
"http://localhost:56384
=^=^=^=^=
{\\"name\\":\\"test.txt\\",\\"size\\":5,\\"type\\":\\"text/plain\\",\\"lastModified\\":1574155444339}"
`;

exports[`XUrl 正常的 URL 1`] = `
Object {
  "file": undefined,
  "url": "http://foo.bar",
}
`;

exports[`XUrl 自定义的 URL 1`] = `
Object {
  "file": undefined,
  "url": Array [
    "hello",
  ],
}
`;
